power: Add panel auto-brightness configuration
 * Some panel hardware requires that we twiddle some knobs in sysfs to
   enable proper display calibration (gamma, etc) when auto-brightness
   is enabled. Add a configuration value to handle this.

Change-Id: I3c793c3520fc6f9a18d5a3abf1fe0df803c5e580

Conflicts:
	core/res/res/values/config.xml
	core/res/res/values/symbols.xml

Conflicts:
	core/res/res/values/config.xml
	core/res/res/values/liquid_symbols.xml

--- a/core/res/res/values/liquid_symbols.xml
+++ b/core/res/res/values/liquid_symbols.xml
@@ -177,4 +177,7 @@
   <java-symbol type="anim" name="slide_out_right_no_fade" />
   <java-symbol type="array" name="anim_controls_entries" />
 
+  <!-- Panel auto brightness -->
+  <java-symbol type="integer" name="config_panelAutoBrightnessValue" />
+
 </resources>
