--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1378,4 +1378,7 @@
         config to 7. -->
     <integer name="config_deviceHardwareKeys">0</integer>
 
+    <!-- Integer to configure panel auto brightness mode when changed -->
+    <integer name="config_panelAutoBrightnessValue">-1</integer>
+
 </resources>
