--- a/packages/SystemUI/res/values/liquid_strings.xml
+++ b/packages/SystemUI/res/values/liquid_strings.xml
@@ -152,4 +152,7 @@
     <!-- Title shown in recents popup for adding an application to the split view -->
     <string name="status_bar_recent_add_to_split_view">Add to Split View</string>
 
+    <!-- Active display -->
+    <string name="active_display_privacy_content">Content message not showing because privacy mode enabled</string>
+
 </resources>
