Add torch tile by default if supported
 * New configuration variable config_enableTorch has been moved from
   the settings app that devices should overlay onto.

Change-Id: I2e4cb81390548cf055eae2836280fe9bdc65f0b0

Conflicts:
	core/java/com/android/internal/util/cm/QSConstants.java
	core/java/com/android/internal/util/cm/QSUtils.java
	core/res/res/values/config.xml
	core/res/res/values/symbols.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsController.java

Conflicts:
	core/res/res/values/symbols.xml

Conflicts:
	core/res/res/values/liquid_symbols.xml

Conflicts:
	core/res/res/values/config.xml
	core/res/res/values/liquid_symbols.xml

Conflicts:
	core/res/res/values/config.xml
	core/res/res/values/liquid_symbols.xml

--- a/core/res/res/values/liquid_symbols.xml
+++ b/core/res/res/values/liquid_symbols.xml
@@ -218,4 +218,7 @@
   <java-symbol type="style" name="Animation.Toast.SlideRightLeft" />
   <java-symbol type="style" name="Animation.Toast.SlideLeftRight" />
 
+  <!-- Device supports LED flashlight -->
+  <java-symbol type="bool" name="config_enableTorch" />
+
 </resources>
