Better expose 'QS Tiles and layout' function
Reorganizing & customizing the QS tiles is one of our features, but it
is buried 4 clicks deep in Settings menus. This is not ideal.

Create a new icon on the main QS panel view to quickly launch into
the configuration page.

Screenshots: http://imgur.com/a/H3iN7

This respects all the existing flip animations and quick pulldown. Does not
interfere with the clear-all button either.

PS2: Rebase
PS3: Change intent
PS4: Add missing boolean
PS5: Whitespace & Use different icon
PS6: Address comments and add additional drawable densities
PS7: Fix reference to old drawable
PS9: Swap back to + icon
PS10: Typo

Change-Id: Ia715767ba2a7cfdd44b0fafa082877def6867440

Conflicts:
	packages/SystemUI/res/layout/status_bar_expanded_header.xml
	packages/SystemUI/res/values/cm_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/PhoneStatusBar.java

--- a/packages/SystemUI/res/values/liquid_strings.xml
+++ b/packages/SystemUI/res/values/liquid_strings.xml
@@ -220,4 +220,7 @@
     <string name="accessibility_ime_navigation_left">Cursor left</string>
     <string name="accessibility_ime_navigation_right">Cursor right</string>
 
+    <!-- Content description for the add quick settings tile button. [CHAR LIMIT=NONE] -->
+    <string name="accessibility_desc_add_quick_settings">Add Quick settings</string>
+
 </resources>
