--- a/packages/SystemUI/res/layout/status_bar_expanded_header.xml
+++ b/packages/SystemUI/res/layout/status_bar_expanded_header.xml
@@ -71,67 +71,13 @@
                 android:layout_toEndOf="@id/clock"
                 android:layout_centerVertical="true"
                 />
-
         </RelativeLayout>
 
         <ImageView
             android:id="@+id/spacer"
-            android:layout_width="2dp"
-            android:layout_height="30dp"
-            android:layout_marginTop="5dp"
-            android:layout_marginBottom="5dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginStart="5dp"
-            android:background="@android:drawable/divider_horizontal_dark"
-            />
-
-        <LinearLayout
-            android:id="@+id/reminder"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:paddingStart="4dp"
-            android:paddingEnd="4dp"
             android:background="@drawable/ic_notify_button_bg"
-            android:orientation="vertical"
-            >
-            <TextView
-                android:id="@+id/title"
-                android:paddingTop="8dp"
-                android:ellipsize="marquee"
-                android:marqueeRepeatLimit="marquee_forever"
-                android:focusable="true"
-                android:focusableInTouchMode="true"
-                android:scrollHorizontally="true"
-                android:paddingBottom="1dp"
-                android:textAllCaps="true"
-                android:textSize="12dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                />
-            <ViewFlipper
-                android:id="@+id/message"
-                android:inAnimation="@anim/reminder_fade_in"
-                android:outAnimation="@anim/reminder_fade_out"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:paddingBottom="8dp"
-                />
-            <ViewFlipper
-                android:id="@+id/message_land"
-                android:inAnimation="@anim/reminder_fade_in"
-                android:outAnimation="@anim/reminder_fade_out"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:singleLine="true"
-                android:paddingBottom="8dp"
-                />
-        </LinearLayout>
-
-        <Space
-            android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_weight="1"
             />
 
@@ -151,7 +97,7 @@
         <ImageView android:id="@+id/clear_all_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:layout_marginLeft="4dp"
+            android:layout_marginLeft="6dp"
             android:scaleType="center"
             android:src="@drawable/ic_notify_clear"
             android:background="@drawable/ic_notify_button_bg"
@@ -170,6 +116,16 @@
                 android:scaleType="center"
                 android:src="@drawable/ic_notify_halo"
                 android:contentDescription="@string/accessibility_halo"
+                />
+
+            <ImageView android:id="@+id/add_tile_button"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:scaleType="center"
+                android:src="@drawable/ic_menu_add"
+                android:background="@drawable/ic_notify_button_bg"
+                android:visibility="gone"
+                android:contentDescription="@string/accessibility_desc_add_quick_settings"
                 />
         </FrameLayout>
 
