Add Fast Charge QS Tile [1/2]
Change-Id: I9e28bb14549c176cacfe2a861b1e5f56cd9e242f

Conflicts:
	core/java/com/android/internal/util/slim/DeviceUtils.java
	core/java/com/android/internal/util/slim/QSConstants.java
	core/res/res/values/config.xml
	packages/SystemUI/res/values/custom_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsController.java

Conflicts:
	core/java/com/android/internal/util/liquid/DeviceUtils.java
	core/res/res/values/config.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsController.java

Conflicts:
	core/java/com/android/internal/util/liquid/DeviceUtils.java
	core/java/com/android/internal/util/liquid/QSConstants.java
	packages/SystemUI/res/values/liquid_strings.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/QuickSettingsController.java

Conflicts:
	core/java/com/android/internal/util/liquid/QSConstants.java

--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1414,4 +1414,7 @@
     <string name="config_perf_profile_prop">sys.perf.profile</string>
     <string name="config_perf_profile_default_entry">1</string>
 
+    <!-- Set to empty string to disable. Can be added to device overlay for device-specific path -->
+    <string name="config_fastChargePath" translatable="false">/sys/kernel/fast_charge/force_fast_charge</string>
+
 </resources>
