--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1384,4 +1384,7 @@
     <!-- Device supports LED flashlight -->
     <bool name="config_enableTorch">false</bool>
 
+    <!-- Set to empty string to disable. Can be added to device overlay for device-specific path -->
+    <string name="config_fastChargePath" translatable="false">/sys/kernel/fast_charge/force_fast_charge</string>
+
 </resources>
