--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1387,4 +1387,8 @@
     <!-- Set to empty string to disable. Can be added to device overlay for device-specific path -->
     <string name="config_fastChargePath" translatable="false">/sys/kernel/fast_charge/force_fast_charge</string>
 
+    <!-- Performance profiles THIS IS A DUMMY SO WE CAN TRACK COMMON REPOS UPSTREAM -->
+    <string name="config_perf_profile_prop">sys.perf.profile</string>
+    <string name="config_perf_profile_default_entry">1</string>
+
 </resources>
