--- a/packages/SystemUI/res/values/liquid_strings.xml
+++ b/packages/SystemUI/res/values/liquid_strings.xml
@@ -181,9 +181,6 @@
     <string name="pie_phone_status_airplane_mode">Airplane mode on</string>
     <string name="pie_phone_status_emergency_only">Emergency calls only</string>
 
-    <!-- Smart PullDown Warning -->
-    <string name="smart_pulldown_disabled">Smart pulldown is disabled</string>
-
     <!-- Title shown in recents popup for adding an application to the split view -->
     <string name="status_bar_recent_add_to_split_view">Add to Split View</string>
 
@@ -194,5 +191,11 @@
     <string name="memory">RAM</string>
     <string name="service_free_mem"><xliff:g id="memory">%1$s</xliff:g> free</string>
     <string name="service_used_mem"><xliff:g id="memory">%1$s</xliff:g> used</string>
+
+    <!-- Hide notification icons -->
+    <string name="status_bar_notification_hide_icon_packages">Hide status bar app\'s notification icon(s)</string>
+
+    <!-- Smart PullDown Warning -->
+    <string name="smart_pulldown_disabled">Smart pulldown is disabled</string>
 
 </resources>
