Frameworks: Port BatteryBar (1/2)
{x} Adds Battery bar with following features:
{x} location set
{x} color
{x} aligment
{x} thickness
{x} charging animation

Change-Id: Ie9a168121dc569ec3af068a4bda6b46a4e896b2d

Frameworks: update battery bar default color to match kitkat ui (1/2)

Change-Id: I4fc0b51abb29ac0a9f0b86e4d0ad3519f697b0f6

Conflicts:
	core/java/android/provider/Settings.java
	packages/SystemUI/res/layout-sw600dp/navigation_bar.xml
	packages/SystemUI/res/layout/navigation_bar.xml

Conflicts:
	packages/SystemUI/res/drawable/ic_recents_clear.xml
	packages/SystemUI/res/layout/navigation_bar.xml

Conflicts:
	core/java/android/provider/Settings.java
	packages/SystemUI/res/values/liquid_attrs.xml

--- a/packages/SystemUI/res/values/liquid_attrs.xml
+++ b/packages/SystemUI/res/values/liquid_attrs.xml
@@ -36,5 +36,10 @@
     <declare-styleable name="QuickSettingsContainer">
         <attr name="singleRow" format="boolean" />
     </declare-styleable>
+	
+    <!-- Battery bar -->
+	<declare-styleable name="BatteryBarController">
+        <attr name="viewLocation" format="integer" />
+    </declare-styleable>
 
 </resources>
