--- a/packages/SystemUI/res/values/liquid_dimens.xml
+++ b/packages/SystemUI/res/values/liquid_dimens.xml
@@ -27,7 +27,8 @@
     <dimen name="glowpad_overflow_notifications_margin_top">64dp</dimen>
     <dimen name="ad_clock_margin_bottom">60dp</dimen>
     <dimen name="ad_notification_margin">4dp</dimen>
-    <dimen name="overflow_icon_size">28dp</dimen>
+    <dimen name="overflow_icon_size">32dp</dimen>
+    <dimen name="overflow_background_icon_size">56dp</dimen>
     <dimen name="handle_icon_size">32dp</dimen>
     <dimen name="overflow_icon_padding">2dp</dimen>
     <dimen name="ad_clock_font_size">75dp</dimen>
