Framework: Quick Access Ribbon (Part 1 of 2) This patchset removes power widgets and replaces it with a smaller version of the quick settings panel.
Credit: Danesh (CM)

Conflicts:
	packages/SystemUI/res/values/liquid_attrs.xml
	packages/SystemUI/src/com/android/systemui/statusbar/phone/PhoneStatusBar.java

--- a/packages/SystemUI/res/values/liquid_attrs.xml
+++ b/packages/SystemUI/res/values/liquid_attrs.xml
@@ -18,7 +18,7 @@
 
 <resources>
 
-    <!-- Battery icon -->
+    <!-- Battery view -->
     <declare-styleable name="BatteryIcon">
         <attr name="batteryView" format="string" />
     </declare-styleable>
@@ -31,6 +31,10 @@
         <attr name="round_background" format="boolean" />
         <attr name="is_oval" format="boolean" />
         <attr name="android:scaleType" />
+
+    <!-- Quick ribbons -->
+    <declare-styleable name="QuickSettingsContainer">
+        <attr name="singleRow" format="boolean" />
     </declare-styleable>
 
 </resources>
