--- a/core/res/res/values/config.xml
+++ b/core/res/res/values/config.xml
@@ -1394,8 +1394,11 @@
             4 - Menu
             8 - Assistant (search)
            16 - App switch
+           32 - Camera
         For example, a device with Home, Back and Menu keys would set this
-        config to 7. -->
+        config to 7. -->    <!-- Indicates that the device has Single-stage Camera key
+         (without "Focus" state) instead of Dual-stage. -->
+    <bool name="config_singleStageCameraKey">false</bool>
     <integer name="config_deviceHardwareKeys">0</integer>
 
     <!-- Integer to configure panel auto brightness mode when changed -->
