--- a/core/res/res/values/liquid_symbols.xml
+++ b/core/res/res/values/liquid_symbols.xml
@@ -229,4 +229,8 @@
   <!-- Device supports LED flashlight -->
   <java-symbol type="bool" name="config_enableTorch" />
 
+  <!-- On-The-Go -->
+  <java-symbol type="string" name="global_action_onthego" />
+  <java-symbol type="drawable" name="ic_lock_onthego" />
+
 </resources>
