--- a/packages/SystemUI/res/values/liquid_strings.xml
+++ b/packages/SystemUI/res/values/liquid_strings.xml
@@ -216,4 +216,8 @@
     <string name="quick_settings_onthego_back">Rear Camera</string>
     <string name="quick_settings_onthego_front">Front Camera</string>
 
+    <!-- Navigation bar IME navigation -->
+    <string name="accessibility_ime_navigation_left">Cursor left</string>
+    <string name="accessibility_ime_navigation_right">Cursor right</string>
+
 </resources>
