Fix remaining status bar build derps

--- a/packages/SystemUI/res/values/liquid_attrs.xml
+++ b/packages/SystemUI/res/values/liquid_attrs.xml
@@ -31,6 +31,7 @@
         <attr name="round_background" format="boolean" />
         <attr name="is_oval" format="boolean" />
         <attr name="android:scaleType" />
+    </declare-styleable>
 
     <!-- Quick ribbons -->
     <declare-styleable name="QuickSettingsContainer">
